change region name to add prefix trippy_ and update template name and version

--- a/templates/components/common/footer.html
+++ b/templates/components/common/footer.html
@@ -103,5 +103,5 @@
             </div>
         {{/if}}
     </div>
-    {{{region name="ssl_site_seal--global"}}}
+    {{{region name="trippy_ssl_site_seal--global"}}}
 </footer>
