--- a/templates/components/products/product-view.html
+++ b/templates/components/products/product-view.html
@@ -112,7 +112,7 @@
                     {{> components/common/login-for-pricing}}
                 {{/or}}
             </div>
-            {{{region name="product_below_price"}}}
+            {{{region name="trippy_product_below_price"}}}
             <div class="productView-rating">
                 {{#if settings.show_product_rating}}
                     {{> components/products/ratings rating=product.rating}}
