--- a/templates/pages/brand.html
+++ b/templates/pages/brand.html
@@ -25,7 +25,7 @@ brand:
     </div>
 {{/if}}
 <h1 class="page-heading">{{brand.name}}</h1>
-{{{region name="brand_below_header"}}}
+{{{region name="trippy_brand_below_header"}}}
 <div class="page">
     <aside class="page-sidebar" id="faceted-search-container">
         {{> components/brand/sidebar}}
@@ -40,7 +40,7 @@ brand:
             {{else}}
                 <p>{{lang 'brands.no_products'}}</p>
             {{/if}}
-            {{{region name="brand_below_content"}}}
+            {{{region name="trippy_brand_below_content"}}}
         {{/if}}
     </div>
 </div>
