--- a/templates/pages/cart.html
+++ b/templates/pages/cart.html
@@ -26,7 +26,7 @@ cart: true
                 {{> components/cart/totals}}
             </div>
 
-            {{{region name="cart_below_totals"}}}
+            {{{region name="trippy_cart_below_totals"}}}
 
             {{#if cart.show_primary_checkout_button}}
                 <div class="cart-actions cart-content-padding-right">
