--- a/templates/pages/product.html
+++ b/templates/pages/product.html
@@ -22,7 +22,7 @@ product:
     <div>
         {{> components/products/product-view}}
 
-        {{{region name="product_below_content"}}}
+        {{{region name="trippy_product_below_content"}}}
 
         {{#if product.videos.list.length}}
             {{> components/products/videos product.videos}}
