--- a/templates/pages/search.html
+++ b/templates/pages/search.html
@@ -135,7 +135,7 @@ product_results:
             {{> components/search/product-listing}}
         </div>
 
-        {{{region name="search_below_content"}}}
+        {{{region name="trippy_search_below_content"}}}
     </div>
 </section>
 
