--- a/templates/components/common/header.html
+++ b/templates/components/common/header.html
@@ -29,5 +29,5 @@
         {{> components/common/navigation-menu}}
     </div>
 </header>
-{{{region name="header_bottom--global"}}}
-{{{region name="header_bottom"}}}
+{{{region name="trippy_header_bottom--global"}}}
+{{{region name="trippy_header_bottom"}}}
