--- a/templates/pages/brands.html
+++ b/templates/pages/brands.html
@@ -8,7 +8,7 @@ brands:
 
 <section class="page">
     <h1 class="page-heading">{{lang 'brand.label'}}</h1>
-    {{{region name="brands_below_header"}}}
+    {{{region name="trippy_brands_below_header"}}}
     <ul class="brandGrid">
         {{#each brands}}
             <li class="brand">
@@ -36,7 +36,7 @@ brands:
         {{/each}}
     </ul>
     {{> components/common/paginator pagination.brands}}
-    {{{region name="brands_below_content"}}}
+    {{{region name="trippy_brands_below_content"}}}
 </section>
 {{/partial}}
 {{> layout/base}}
