--- a/templates/pages/home.html
+++ b/templates/pages/home.html
@@ -12,11 +12,11 @@ blog:
         limit: {{theme_settings.homepage_blog_posts_count}}
 ---
 {{#partial "hero"}}
-    {{{region name="home_below_menu"}}}
+    {{{region name="trippy_home_below_menu"}}}
     {{#and carousel carousel.slides.length}}
         {{> components/carousel arrows=theme_settings.homepage_show_carousel_arrows play_pause_button=theme_settings.homepage_show_carousel_play_pause_button}}
     {{/and}}
-    {{{region name="home_below_carousel"}}}
+    {{{region name="trippy_home_below_carousel"}}}
 {{/partial}}
 
 {{#partial "page"}}
@@ -29,17 +29,17 @@ blog:
     {{#if products.featured}}
         {{> components/products/featured products=products.featured columns=theme_settings.homepage_featured_products_column_count}}
     {{/if}}
-    {{{region name="home_below_featured_products"}}}
+    {{{region name="trippy_home_below_featured_products"}}}
 
     {{#if products.top_sellers}}
         {{> components/products/top products=products.top_sellers columns=theme_settings.homepage_top_products_column_count}}
     {{/if}}
-    {{{region name="home_below_top_products"}}}
+    {{{region name="trippy_home_below_top_products"}}}
 
     {{#if products.new}}
         {{> components/products/new products=products.new columns=theme_settings.homepage_new_products_column_count}}
     {{/if}}
-    {{{region name="home_below_new_products"}}}
+    {{{region name="trippy_home_below_new_products"}}}
 </div>
 {{/partial}}
 {{> layout/base}}
