--- a/templates/pages/page.html
+++ b/templates/pages/page.html
@@ -17,7 +17,7 @@
     </nav>
     {{/if}}
 
-    {{{region name="page_builder_content"}}}
+    {{{region name="trippy_page_builder_content"}}}
 
     <div class="page-content page-content--centered">
         {{#replace '%%Syndicate%%' page.content}}
